src/pages/explore/nestedDropdown/AccordianMenu.module.css
.dropdown {
  width: 160px;
  /* height: 22px; */
  position: relative;
  margin-top: 8px;
}
.dropdown:hover {
  cursor: pointer;
}
.value {
  font-family: Poppins;
  font-weight: 400;
  position: absolute;
  left: 20px;
  top: -3px;
}
/* .all{
  background-color: white;
} */
.relative {
  position: relative;
}
/* .container {
  position: absolute;
  top: 24px;
  width: 160px;
  border-radius: 10px;
} */
.dropdown-option-focus {
  background: #f7f5f9;
  color: #8064a2;
}
.pContainer {
  font-family: Poppins;
  font-size: 14px;
  font-weight: 600;
  line-height: 18px;
  letter-spacing: 0.005em;
  text-align: left;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 4px;
  color: #6d747a;
}

.pOptions {
  font-family: Poppins;
  font-size: 14px;
  font-weight: 400;
  line-height: 18px;
  letter-spacing: 0.005em;
  text-align: left;
  color: #6d747a;
}
.peopleOpened {
  color: #8064a2;
}
.placeOpened {
  color: #77933c;
}
.programOpened {
  color: #0096c8;
}
.productOpened {
  color: #c0504d;
}
.categoryName {
  padding-right: 50px;
}
.searchIcon {
  position: absolute;
  margin-top: 30px;
}
.categorySuggestion {
  position: relative;
  margin-top: -24px;
}
.arrow {
  position: absolute;
  top: 30px;
  right: 0;
  cursor: pointer;
  transition: all 300ms ease-in-out;
}
.arrowRotated {
  transform: rotate(180deg);
}
.dropdownCategory {
  top: 54px;
  max-width: 210px;
  width: 100%;
  position: absolute;
  max-height: 280px;
  overflow-y: auto;
  left: 0;
  background: #ffffff;
  border: 1px solid #ebedf0;
  border-radius: var(--spacing-4);
  padding: var(--spacing-4);
  filter: drop-shadow(0px 0px 2px rgba(147, 156, 163, 0.36))
    drop-shadow(0px 8px 12px rgba(147, 156, 163, 0.12));
  z-index: 500;
  text-align: left;
}
.text-left {
  text-align: left;
}

.dropdownCategory p {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 18px;
  letter-spacing: 0.005em;
  border-radius: 4px;
  padding: var(--spacing-8);
  color: #6d747a;
  cursor: pointer;
  text-align: left;
}

.dropdownCategory p:hover {
  background: #f7f5f9;
  color: #8064a2;
}

.dropdownCategory,
.dropdownCategory p {
  box-sizing: border-box;
}

@media screen and (max-width: 1100px) {
  .dropdown {
    width: 100%;
  }
  .categorySuggestion {
    width: 100%;
  }
  .dropdownCategory {
    left: 0;
    position: absolute;
    top: 54px;
    z-index: 500;
  }
}

